Reduce Windows Go cold boot and fix client runtime options